--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
       rel="stylesheet"
       href="https://iconawesome.com/assets/css/awesomeIcon.css"
     />
+    <style>
+      /* Include your custom CSS here */
+      .select-hide {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background: none;
+        border: none;
+        
+      }</style>
   </head>
 
   <body>
