--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       href="https://iconawesome.com/assets/css/awesomeIcon.css"
     />
     <style>
-      /* Include your custom CSS here */
+      
       .select-hide {
-        appearance: none;
+        /* appearance: none;
         -webkit-appearance: none;
         -moz-appearance: none;
         background: none;
         border: none;
-        
+         */
+         border: none;
       }</style>
   </head>
 
